# ZeroKV

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/src/: handshake.rs  lib.rs  msgbuf.rs  rdma_context.rs  table.rs
server/: Cargo.toml
server/src/: main.rs
