[workspace]
members = [
    "core",
    "server",
    "client",
]
resolver = "2"

[workspace.dependencies]
ibverbs    = { version = "0.9.2", features = ["serde"] }
tokio      = { version = "1.0", features = ["full"] }
xxhash-rust  = { version = "0.8", features = ["xxh3"] }
crossbeam  = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }