[package]
name    = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
core                 = { path = "../core" }
ibverbs              = { workspace = true }
tokio                = { workspace = true }
crossbeam            = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
hdrhistogram = "7"
rand         = "0.8"
libc         = "0.2"
