[package]
name    = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
core                 = { path = "../core" }
ibverbs              = { workspace = true }
tokio                = { workspace = true }
crossbeam            = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }